test-expected/large/audit/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: audit
    foo.com/duversion: 1.16.13-20190909.1568058546912
    foo.com/version: 1.16.13
  labels:
    app.kubernetes.io/name: audit
    helm.sh/chart: audit-1.16.13
  name: audit
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /audit
    - uri:
        prefix: /audit/
    route:
    - destination:
        host: audit.peekay.svc.cluster.local
